# SPO_VM

./: .gitignore  .travis.yml  README.md  lab1.sln  makefile
lab1/: CoffeMachine.cpp  CoffeMachine.h  Drink.cpp  Drink.h  Person.cpp  Person.h  info.db  lab1.sln  lab1.vcxproj  lab1.vcxproj.filters  main.cpp  makefile
lab1/lab1/: CoffeMachine.cpp  CoffeMachine.h  Drink.cpp  Drink.h  Person.cpp  Person.h  lab1.vcxproj  lab1.vcxproj.filters  main.cpp
lab1/view/: StreamInput.h
lab2/: lab2.sln  makefile
lab2/lab2/: CoffeMachine.cpp  CoffeMachine.h  Constants.h  Controller.cpp  Controller.h  Drink.cpp  Drink.h  Person.cpp  Person.h  info.db  lab2.vcxproj  lab2.vcxproj.filters  main.cpp
lab3/: .gitignore  AJIOBlib.cpp  AJIOBlib.h  AllExceptions.h  BadCommandLineArgumentsException.h  CannotCreateSharedMemoryException.h  CannotReallocSharedMemoryException.h  CannotWorkWithMachineException.h  CannotWorkWithPersonException.h  Client.cpp  Client.h  CoffeMachine.cpp  CoffeMachine.h  CoffeeMachine.cpp  CoffeeMachine.h  CoffeeMachineController.cpp  CoffeeMachineController.h  Constants.h  Controller.cpp  Controller.h  CreateSharedMemoryException.h  Drink.h  InitMutexException.h  MachineAlreadyRunningException.h  NoRunningMachineException.h  Person.cpp  Person.h  PersonController.cpp  PersonController.h  ReallocSharedMemoryException.h  Server.cpp  Server.h  Structs.h  VA_Exception.h  WorkWithMachineException.h  WorkWithPersonException.h  info.db  lab3.sln  lab3.vcxproj  lab3.vcxproj.filters  (+2 more)
lab3/exceptions/: AllExceptions.h  BadCommandLineArgumentsException.h  MachineAlreadyRunningException.h  MapSharedMemoryException.h  NoRunningMachineException.h  ServerAlreadyExistException.h  VA_Exception.h  WorkWithMachineException.h  WorkWithPersonException.h  WritePIDException.h
lab3/view/: StreamInput.h
lab4/: .gitignore  CMakeLists.txt  lab4.sln  lab4.vcxproj  lab4.vcxproj.filters  makefile
lab4/code/: Sync.h  Thread.cpp  Thread.h  ThreadFuncs.cpp  ThreadFuncs.h  ThreadGenerator.cpp  ThreadGenerator.h  ThreadManager.cpp  ThreadManager.h  UI.cpp  UI.h  logs.h  main.cpp
lab5/linux/: .gitignore  CMakeLists.txt  makefile
lab5/linux/code/: main.cpp  parser_main.cpp
lab5/linux/code/exceptions/: AllExceptions.h
lab5/linux/code/exceptions/headers/: BadCMDAgrsException.h  BadLoadingDLLException.h  CreateProcessException.h  CreatingNewThreadException.h  FileLengthException.h  OpenFileException.h  RangeException.h  VA_Exception.h  WaitSignalException.h
lab5/linux/code/model/: AsyncReadWriteLib.cpp  AsyncReadWriteLib.h  Constants.h  FindFuncs.cpp  FindFuncs.h  ParserManager.cpp  ParserManager.h  ProcessCreator.cpp  ProcessCreator.h  Sync.cpp  Sync.h  Threads.cpp  Threads.h  handlers.cpp  handlers.h
lab5/linux/code/view/headers/: StreamInput.h  StreamOutput.h  log.h
lab5/linux/code/view/source/: StreamInput.cpp  StreamOutput.cpp  log.cpp
lab5/windows/: lab5.sln
lab6/lab6/: lab6.vcxproj  main.cpp
lab7/: VA_FSCluster.cpp  VA_FSCluster.h  VA_FSClusterHead.cpp  VA_FSClusterHead.h  VA_FSClusterMetadata.cpp  VA_FSClusterMetadata.h  VA_FSFileWayMetadata.cpp  VA_FSFileWayMetadata.h  VA_FSHead.cpp  VA_FSHead.h  VA_FSHeadMetadata.cpp  VA_FileSystem.cpp  VA_FileSystem.h  lab7.sln  lab7.vcxproj  lab7.vcxproj.filters  types.h
lab7/UI/: Menu.cpp  Menu.h  UI.vcxproj  main.cpp
lab7/gtest/: VA_FSClusterMetadata_tests.h  VA_FSFileWayMetadata_tests.h  gtest.vcxproj  main.cpp  (+2 more)
(+12 files in other folders)
